--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Crcons.GitHub.io by crcons</title>
+    <title>crcons.github.io by crcons</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
       <div class="inner">
 
         <header>
-          <h1>Crcons.GitHub.io</h1>
+          <h1>crcons.github.io</h1>
           <h2></h2>
         </header>
 
@@ -51,6 +51,11 @@
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+
+<form>
+  <input type="text" name="full_name">
+  <input type="submit" value="Submit" onclick="getIngredients()">
+</form>
 
 <p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
         </section>
