--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <script src="javascripts/main.js"></script>
     <title>crcons.github.io by crcons</title>
   </head>
 
@@ -58,6 +59,7 @@
   <input type="text" name="full_name">
   <input type="submit" value="Submit" onclick="getIngredients()">
 </form>
+<div id="ingredients"></div>
 
         </section>
 
