--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 <form>
   <input type="text" name="full_name">
-  <input type="submit" value="Submit" onclick="getIngredients(full_name.value)">
+  <button type="button" value="Get my ingredients!" onclick="getIngredients(full_name.value)">
 </form>
 <div id="ingredients"></div>
 
