changing api address

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <script src="javascripts/main.js"></script>
-    <script src="https://spreadsheets.google.com/tq?tq=select%20A&key=1rgFHL4Mxkio-l5mcI8kDtn8k5QzmOs2MG-0g58N3j5I&tqx=reqId%3A2"></script>
+    <script src="https://www.gstatic.com/charts/loader.js"></script>
     <title>crcons.github.io by crcons</title>
   </head>
 
