--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <![endif]-->
     <script src="javascripts/main.js"></script>
     <script src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+      google.charts.load('current', {packages: ['corechart', 'table']});
+      //google.charts.setOnLoadCallback(drawChart);
+    </script>
     <title>crcons.github.io by crcons</title>
   </head>
 
