--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
       google.charts.load('current', {packages: ['corechart', 'table']});
-      //google.charts.setOnLoadCallback(drawChart);
+      google.charts.setOnLoadCallback(onLoadCallback);
     </script>
     <title>crcons.github.io by crcons</title>
   </head>
