--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script>
       google.charts.load('current', {packages: ['corechart', 'table']});
     </script>
+    <script src="javascripts/accent_folding.js"></script>
     <script src="javascripts/main.js"></script>
     <title>crcons.github.io by crcons</title>
   </head>
