--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </script>
     <script src="javascripts/accent_folding.js"></script>
     <script src="javascripts/main.js"></script>
-    <title>crcons.github.io by crcons</title>
+    <title>Desafio Chaud Patate - Scrabble</title>
   </head>
 
   <body>
@@ -24,7 +24,7 @@
       <div class="inner">
 
         <header>
-          <h1>crcons.github.io</h1>
+          <h1>Desafio Chaud Patate - Scrabble Dinner</h1>
         </header>
 
         <form>
